# npvpn_appmetrica_etl

./: .gitignore  .gitlab-ci.yml  README.md  appmetrica_etl.py  config.py  pyproject.toml  requirements.txt  utils.py
connectors/: appmetrica_connector.py  ch_connector.py
